[project]
name = "psi-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "ipython>=9.14.1",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
]
